UI: add routing test && fix rootpath error && reponse value

--- a/src/app/components/management/management.component.html
+++ b/src/app/components/management/management.component.html
@@ -337,6 +337,7 @@
                   style="height: 76%"
                   [config]="config" 
                   [value]="responseSrc" 
+                  (valueChange)="handleChange1($event)" 
                   [theme]="'tomorrow'" 
                   [mode]="'dot'">
                 </ace>
