UI: add notice and fix graph

--- a/src/app/components/graph/graph.component.html
+++ b/src/app/components/graph/graph.component.html
@@ -4,3 +4,7 @@
   (dragover)="handleNodeShapeDragOver($event)"
   (drop)="handleNodeShapeDrop.call(this, $event)">
 </div>
+<d-toast 
+  [value]="msgs" 
+  [style]="{ top: '100px' }">
+</d-toast>
