--- a/src/app/components/tool-bar/tool-bar.component.html
+++ b/src/app/components/tool-bar/tool-bar.component.html
@@ -915,3 +915,7 @@
         </d-data-table>
     </d-content>
 </ng-template>
+<d-toast 
+  [value]="msgs" 
+  [style]="{ top: '100px' }">
+</d-toast>
