--- a/src/app/components/graph/graph.component.less
+++ b/src/app/components/graph/graph.component.less
@@ -1,12 +1,13 @@
 .graph-svg {
-  height: 100%;
-  width : 1000px;
+  height: calc(80vh);
 
-  svg {
+  ::ng-deep svg {
     height: 100%;
+    width : 100%;
   }
 
   position: relative;
   width   :100%;
   z-index :0;
+
 }
