--- a/src/app/pages/main/main.component.html
+++ b/src/app/pages/main/main.component.html
@@ -84,6 +84,7 @@
                 [onSelect]="handleGraphComponentSelect"
                 [onTextChange]="handleTextChange"
                 [onInitialized]="handleGraphInitialized"
+                [onNodeAttributeChange]="handleNodeAttributeChange"
                 [registerGetSvg]="registerGetSvg"
                 [registerNodeShapeClick]="registerNodeShapeClick"
                 [registerNodeShapeDragStart]="registerNodeShapeDragStart"
