--- a/src/app/components/modal-save-as/modal-save-as.component.html
+++ b/src/app/components/modal-save-as/modal-save-as.component.html
@@ -3,6 +3,5 @@
     <input
       type='text'
       [(ngModel)]="graphName"
-      style="width: 100%;"
-      (change)="onInputChange()">
+      style="width: 100%;">
 </div>
