--- a/src/app/components/first/first.component.html
+++ b/src/app/components/first/first.component.html
@@ -8,7 +8,7 @@
   </div>
 </div>
 <div class="sp-panel">
-  <div class="ch-panel border" (click)="header.goExample()">
+  <div class="ch-panel border" (click)="header.goSolution()">
     <div class="container-flex">
       <div class="first-icon icon-example">
       </div>
@@ -34,7 +34,7 @@
       {{ 'first.introductionGraph' | translate}}
     </div>
   </div>
-  <div class="ch-panel border" (click)="header.goTask()">
+  <div class="ch-panel border" (click)="header.goManagement()">
     <div class="container-flex">
       <div class="first-icon icon-task">
       </div>
