--- a/src/app/components/tool-bar-solution/tool-bar-solution.component.html
+++ b/src/app/components/tool-bar-solution/tool-bar-solution.component.html
@@ -10,7 +10,7 @@
         [content]="'toolBar.backButton' | translate"
         [disabled]="!hasUndo"
         (click)="handleUndoButtonClick($event)">
-          <img src={{backSvg}} />
+          <img [src]="backSvg" />
         </d-button>
         <d-button
           id="undo2"
@@ -20,7 +20,7 @@
           [content]="'toolBar.backButton' | translate"
           [disabled]="!hasUndo"
           (click)="handleUndoButtonClick($event)">
-          <img src={{backDisabledSvg}} />
+          <img [src]="backDisabledSvg" />
         </d-button>
         <d-button
           id="redo1"
@@ -30,7 +30,7 @@
           [content]="'toolBar.redoButton' | translate"
           [disabled]="!hasRedo"
           (click)="handleRedoButtonClick($event)">
-          <img src={{redoSvg}} />
+          <img [src]="redoSvg" />
         </d-button>
         <d-button
           id="redo2"
@@ -40,7 +40,7 @@
           [content]="'toolBar.redoButton' | translate"
           [disabled]="!hasRedo"
           (click)="handleRedoButtonClick($event)">
-          <img src={{redoDisabledSvg}} />
+          <img [src]="redoDisabledSvg" />
         </d-button>
       </span>
       <span id="zoominout">
@@ -50,7 +50,7 @@
           bsStyle="text-dark"
           [content]="'toolBar.zoomInButton' | translate"
           (click)="handleZoomInButtonClick($event)">
-          <img src={{zoomInSvg}} />
+          <img [src]="zoomInSvg" />
         </d-button>
         <d-button
           id="zoom-out"
@@ -58,7 +58,7 @@
           bsStyle="text-dark"
           [content]="'toolBar.zoomOutButton' | translate"
           (click)="handleZoomOutButtonClick($event)">
-          <img src={{zoomOutSvg}} />
+          <img [src]="zoomOutSvg" />
         </d-button>
       </span>
       <d-button
@@ -67,7 +67,7 @@
         bsStyle="text-dark"
         [content]="'toolBar.zoomResetButton' | translate"
         (click)="handleZoomResetButtonClick($event)">
-        <img src={{zoomResetSvg}} />
+        <img [src]="zoomResetSvg" />
       </d-button>
       <d-button
         id="zoom-fit"
@@ -75,7 +75,7 @@
         bsStyle="text-dark"
         [content]="'toolBar.zoomFitButton' | translate"
         (click)="handleZoomFitButtonClick($event)">
-        <img src={{zoomFitSvg}} />
+        <img [src]="zoomFitSvg" />
       </d-button>
       <d-button
         id="switch"
@@ -83,7 +83,7 @@
         bsStyle="text-dark"
         [content]="'toolBar.switchButton' | translate"
         (click)="handleSwitchDirectionButtonClick($event)">
-        <img src={{switchSvg}} />
+        <img [src]="switchSvg" />
       </d-button>
       <d-button
         id="run"
@@ -92,7 +92,7 @@
         bsStyle="text-dark"
         [content]="'toolBar.runGraphButton' | translate"
         (click)="handleRunButtonClick($event)">
-          <img src={{runGraphSvg}} />
+          <img [src]="runGraphSvg" />
       </d-button>
       <d-button
           id="stop"
@@ -101,7 +101,7 @@
           bsStyle="text-dark"
           [content]="'toolBar.stopGraphButton' | translate"
           (click)="handleStopButtonClick($event)">
-          <img src={{stopSvg}} />
+          <img [src]="stopSvg" />
       </d-button>
       <d-button
           id="restart"
@@ -110,7 +110,7 @@
           bsStyle="text-dark"
           [content]="'toolBar.restartGraphButton' | translate"
           (click)="handleRestartButtonClick($event)">
-          <img src={{restartSvg}} />
+          <img [src]="restartSvg" />
       </d-button>
     </div>
     <div class="tool-bar-right" style="margin: 0 20px 0 20px;">
