--- a/src/app/components/tool-bar/tool-bar.component.html
+++ b/src/app/components/tool-bar/tool-bar.component.html
@@ -8,7 +8,7 @@
           [content]="'toolBar.backButton' | translate"
           [disabled]="!hasUndo"
           (click)="handleUndoButtonClick($event)">
-            <img src={{backSvg}} />
+            <img [src]="backSvg" />
         </d-button>
         <d-button
           id="undo"
@@ -18,7 +18,7 @@
           [content]="'toolBar.backButton' | translate"
           [disabled]="!hasUndo"
           (click)="handleUndoButtonClick($event)">
-            <img src={{backDisabledSvg}} />
+            <img [src]="backDisabledSvg" />
         </d-button>
         <d-button
           id="redo"
@@ -28,7 +28,7 @@
           [content]="'toolBar.redoButton' | translate"
           [disabled]="!hasRedo"
           (click)="handleRedoButtonClick($event)">
-            <img src={{redoSvg}} />
+            <img [src]="redoSvg" />
         </d-button>
         <d-button
           id="redo"
@@ -38,7 +38,7 @@
           [content]="'toolBar.redoButton' | translate"
           [disabled]="!hasRedo"
           (click)="handleRedoButtonClick($event)">
-            <img src={{redoDisabledSvg}} />
+            <img [src]="redoDisabledSvg" />
         </d-button>
         <d-button
           id="zoom-in"
@@ -46,7 +46,7 @@
           bsStyle="text-dark"
           [content]="'toolBar.zoomInButton' | translate"
           (click)="handleZoomInButtonClick($event)">
-            <img src={{zoomInSvg}} />
+            <img [src]="zoomInSvg" />
         </d-button>
         <d-button
           id="zoom-out"
@@ -54,7 +54,7 @@
           bsStyle="text-dark"
           [content]="'toolBar.zoomOutButton' | translate"
           (click)="handleZoomOutButtonClick($event)">
-            <img src={{zoomOutSvg}} />
+            <img [src]="zoomOutSvg" />
         </d-button>
         <d-button
           id="zoom-reset"
@@ -62,7 +62,7 @@
           bsStyle="text-dark"
           [content]="'toolBar.zoomResetButton' | translate"
           (click)="handleZoomResetButtonClick($event)">
-            <img src={{zoomResetSvg}} />
+            <img [src]="zoomResetSvg" />
         </d-button>
         <d-button
           id="zoom-fit"
@@ -70,7 +70,7 @@
           bsStyle="text-dark"
           [content]="'toolBar.zoomFitButton' | translate"
           (click)="handleZoomFitButtonClick($event)">
-            <img src={{zoomFitSvg}} />
+            <img [src]="zoomFitSvg" />
         </d-button>
         <d-button
           id="switch"
@@ -78,7 +78,7 @@
           bsStyle="text-dark"
           [content]="'toolBar.switchButton' | translate"
           (click)="handleSwitchDirectionButtonClick($event)">
-            <img src={{switchSvg}} />
+            <img [src]="switchSvg" />
         </d-button>
         <d-button
           id="run"
@@ -87,7 +87,7 @@
           bsStyle="text-dark"
           [content]="'toolBar.runGraphButton' | translate"
           (click)="handleRunButtonClick($event)">
-            <img src={{runGraphSvg}} />
+            <img [src]="runGraphSvg" />
         </d-button>
         <d-button
             id="stop"
@@ -96,7 +96,7 @@
             bsStyle="text-dark"
             [content]="'toolBar.stopGraphButton' | translate"
             (click)="handleStopButtonClick($event)">
-            <img src={{stopSvg}} />
+            <img [src]="stopSvg" />
         </d-button>        
         <d-button
             id="restart"
@@ -105,7 +105,7 @@
             bsStyle="text-dark"
             [content]="'toolBar.restartGraphButton' | translate"
             (click)="handleRestartButtonClick($event)">
-            <img src={{restartSvg}} />
+            <img [src]="restartSvg" />
         </d-button>
 
     </div>
