UI: change logo format

--- a/src/app/components/header-main/header-main.component.html
+++ b/src/app/components/header-main/header-main.component.html
@@ -2,7 +2,8 @@
   <div 
     class="modelArts-header-container" 
     (click)="click('')">
-    <img [src]="logoSvg" alt="Logo">
+    <div class="logo">
+    </div>
     <div class="logo-text">
       {{ consoleName }}
     </div>
