--- a/src/app/components/header-main/header-main.component.less
+++ b/src/app/components/header-main/header-main.component.less
@@ -23,6 +23,14 @@
       line-height: 24px;
       margin-left: 8px;
     }
+
+    .logo {
+      height          : 28px;
+      width           : 28px;
+      background-size : cover;
+      display         : inline-block;
+      background-image: url("../../../assets/model-arts-logo.svg");
+    }
   }
 
   a {
