--- a/src/app/components/insert-panels/insert-panels.component.less
+++ b/src/app/components/insert-panels/insert-panels.component.less
@@ -75,3 +75,28 @@
     text-align    : center;
     box-shadow    : 0px 4px 8px@lightest-grey
 }
+
+.icon-img{
+    .icon();
+    background-image: url("../../../assets/img.svg");
+}
+
+.icon-video{
+    .icon();
+    background-image: url("../../../assets/video.svg");
+}
+
+.icon-input{
+    .icon();
+    background-image: url("../../../assets/input.svg");
+}
+
+.icon-output{
+    .icon();
+    background-image: url("../../../assets/output.svg");
+}
+
+.icon-common{
+    .icon();
+    background-image: url("../../../assets/common.svg");
+}
