--- a/src/styles.less
+++ b/src/styles.less
@@ -32,3 +32,72 @@
   text-overflow: ellipsis;
   white-space  : nowrap;
 }
+
+.icon {
+  height           : 16px;
+  width            : 16px;
+  display          : inline-block;
+  background-size  : contain;
+  background-repeat: no-repeat;
+}
+
+
+.icon-undo-customed{
+  .icon();
+  background-image: url("./assets/undo.svg");
+}
+
+.icon-undo-disabled{
+  .icon();
+  background-image: url("./assets/undo_disabled.svg");
+}
+
+.icon-redo-customed{
+  .icon();
+  background-image: url("./assets/redo.svg");
+}
+
+.icon-redo-disabled{
+  .icon();
+  background-image: url("./assets/redo_disabled.svg");
+}
+
+.icon-zoom-in-customed{
+  .icon();
+  background-image: url("./assets/zoom-in.svg");
+}
+
+.icon-zoom-out-customed{
+  .icon();
+  background-image: url("./assets/zoom-out.svg");
+}
+
+.icon-zoom-reset{
+  .icon();
+  background-image: url("./assets/zoom-reset.svg");
+}
+
+.icon-zoom-out-map{
+  .icon();
+  background-image: url("./assets/zoom-out-map.svg");
+}
+
+.icon-switch-customed{
+  .icon();
+  background-image: url("./assets/switch.svg");
+}
+
+.icon-run-graph{
+  .icon();
+  background-image: url("./assets/run-graph.svg");
+}
+
+.icon-stop-customed{
+  .icon();
+  background-image: url("./assets/stop.svg");
+}
+
+.icon-restart-customed{
+  .icon();
+  background-image: url("./assets/restart.svg");
+}
