UI: add unit tests

--- a/src/app/components/attribute-panel/attribute-panel.component.html
+++ b/src/app/components/attribute-panel/attribute-panel.component.html
@@ -3,8 +3,7 @@
     dForm
     [layout]="layoutDirection"
     [labelSize]="'sm'"
-    ngForm
-    #myForm1="ngForm">
+    #myForm1>
     <d-form-item>
       <p class="attribute-title">
         {{ 'attributePanel.title' | translate }}
