--- a/src/app/components/tool-bar/tool-bar.component.html
+++ b/src/app/components/tool-bar/tool-bar.component.html
@@ -164,8 +164,7 @@
     <d-layout class="basic-usage">
         <d-layout 
             dForm 
-            [layout]="layoutDirection2" 
-            ngForm 
+            [layout]="layoutDirection2"
             style="margin:10px">
             <d-form-item>
                 <d-form-label [required]="true">
@@ -188,8 +187,7 @@
     <d-layout class="basic-usage">
         <form 
             dForm 
-            [layout]="layoutDirection" 
-            ngForm 
+            [layout]="layoutDirection"
             style="margin:10px">
             <d-form-item>
                 <d-form-label [required]="true">
@@ -280,7 +278,7 @@
 
 <ng-template #openProject id="openProject">
     <d-layout class="basic-usage">
-        <form dForm [layout]="layoutDirection" ngForm style="margin:10px">
+        <form dForm [layout]="layoutDirection" style="margin:10px">
             <d-form-item>
                 <d-form-label [required]="true">
                     {{'toolBar.modal.project_path' | translate}}
@@ -341,7 +339,7 @@
 <ng-template #createFlowunit id="createFlowunit">
 
     <d-layout class="basic-usage">
-        <form dForm [layout]="layoutDirection" ngForm style="margin:10px">
+        <form dForm [layout]="layoutDirection" style="margin:10px">
             <d-form-item>
                 <d-form-label [required]="true">
                     {{'toolBar.modal.unitType' | translate}}
@@ -690,8 +688,7 @@
                 <ng-template dTabContent>
                     <form 
                         dForm 
-                        [layout]="layoutDirection" 
-                        ngForm 
+                        [layout]="layoutDirection"
                         style="margin:10px">
                         <d-form-item>
                             <d-form-label [required]="true">
@@ -766,8 +763,8 @@
                 <ng-template dTabContent>
                     <form 
                         dForm 
-                        [layout]="layoutDirection" 
-                        ngForm>
+                        [layout]="layoutDirection"
+                        >
                         <d-form-item>
                             <d-form-label>
                                 {{'toolBar.setting.perf.trace.enable' | translate}}
