--- a/src/app/components/insert-panels/insert-panels.component.less
+++ b/src/app/components/insert-panels/insert-panels.component.less
@@ -17,6 +17,10 @@
         display: none;
     }
 
+    .search-detail{
+        display:flex;
+    }
+
     .menu-detail {
         margin       : 20px;
         padding-left : 16px;
