--- a/src/app/components/first/first.component.less
+++ b/src/app/components/first/first.component.less
@@ -108,14 +108,54 @@
 
 .border {
   transition: ease-in .2s;
-  background: linear-gradient(0, #c80000 2px, #c80000 2px) no-repeat,
-    linear-gradient(-90deg, #c80000 2px, #c80000 2px) no-repeat,
-    linear-gradient(-180deg, #c80000 2px, #c80000 2px) no-repeat,
-    linear-gradient(-270deg, #c80000 2px, #c80000 2px) no-repeat;
+  background: white;
   background-size    : 0 2px, 2px 0, 0 2px, 2px 0;
   background-position: left top, right top, right bottom, left bottom;
 }
 
 .border:hover {
-  background-size: 100% 2px, 2px 100%, 100% 2px, 2px 100%;
+  .rainbow();
+}
+
+@keyframes rotate {
+	100% {
+		transform: rotate(1turn);
+	}
+}
+
+.rainbow {
+	position: relative;
+	z-index: 0;
+	width: 320px;
+	height: 400px;
+	border-radius: 10px;
+	overflow: hidden;
+	
+	&::before {
+		content: '';
+		position: absolute;
+		z-index: -2;
+		left: -50%;
+		top: -50%;
+		width: 200%;
+		height: 200%;
+		background-repeat: no-repeat;
+		background-size: 50% 50%, 50% 50%;
+		background-position: 0 0, 100% 0, 100% 100%, 0 100%;
+		background-image: linear-gradient(#c80000, white), linear-gradient(white, #c80000);
+		animation: rotate 2s linear infinite;
+	}
+	
+	&::after {
+		content: '';
+		position: absolute;
+		z-index: -1;
+		left: 6px;
+		top: 6px;
+		width: calc(100% - 12px);
+		height: calc(100% - 12px);
+		background: white;
+		border-radius: 5px;
+		opacity: 1;
+	}
 }
