UI: remove unsed files & fix graph error

--- a/src/app/components/tool-bar-solution/tool-bar-solution.component.less
+++ b/src/app/components/tool-bar-solution/tool-bar-solution.component.less
@@ -9,7 +9,8 @@
   border-radius  : 0 2px 0 0;
   display        : flex;
   justify-content: space-between;
-  align-items: baseline;
+  align-items    : baseline;
+  margin-bottom  : 15px;
 
 
   .tool-bar-left {
