--- a/src/app/components/tool-bar/tool-bar.component.less
+++ b/src/app/components/tool-bar/tool-bar.component.less
@@ -105,6 +105,7 @@
     display        : flex;
     justify-content: space-between;
     align-items    : center;
+    margin-bottom  : 15px;
 
     .tool-bar-left {
         display    : inline-block;
