UI: fix style of text-editor

--- a/src/app/pages/main/main.component.less
+++ b/src/app/pages/main/main.component.less
@@ -110,9 +110,6 @@ html {
     }
   }
 
-
-
-
   .ti3-tab-content {
     border: none;
   }
@@ -217,4 +214,13 @@ html {
 
 .ace_content {
   z-index: 0;
+}
+
+.as-split-area-left {
+  -ms-overflow-style: none; /* IE 10+ */
+  scrollbar-width   : none; /* Firefox */
+}
+
+.as-split-area-left::-webkit-scrollbar {
+  display: none; /* Chrome Safari */
 }
